# examples

./: .gitignore  README.md
agents/: README.md
agents/crypto_trader_bot/: .env.example  .gitignore  README.md  bitquery_service.py  config.py  dex_agent.py  dex_rabbit_bot.py  main.py  pyproject.toml  swarmzero_config.toml
agents/dune_agent/: README.md  crypto_agent.py
agents/lend_borrow_agent/: README.md  main.py  requirements.txt
agents/news_agent/: .gitignore  README.md  news_agent.py  requirements.txt
agents/uniswap-retrieval-agent/: README.md  requirements.txt  uniswap-retrieval-agent.py
agents/web_search_agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  swarmzero_config.toml
swarms/: README.md
swarms/dapp_builer_swarm/: .env.example  .gitignore  README.md  main.py  requirements.txt
swarms/dapp_builer_swarm/app/: swarm.py  swarmzero_config.toml
swarms/dapp_builer_swarm/app/agents/: instructions.py
swarms/dapp_builer_swarm/app/agents/qa_engineer/: agent.py
swarms/livepeer_youtube_swarm/: .env.example  .gitignore  README.md  main.py  requirements.txt
swarms/livepeer_youtube_swarm/app/: swarm.py  swarmzero_config.toml
swarms/researcher_swarm/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  swarmzero_config.toml
swarms/researcher_swarm/app/tools/: __init__.py  structures.py  tools.py
swarms/researcher_swarm/app/tools/publishers/: __init__.py  confluence.py  google_docs.py  sharepoint.py
